--- a/src/index.css
+++ b/src/index.css
@@ -130,3 +130,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button {
+  background-color: transparent;
+  border: none;
+}
+button:hover {
+  cursor: pointer;
+}
